# knowledge-base

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
knowledge_base/app/add_consumer/: main.py
knowledge_base/app/add_consumer/di/: config.py  container.py
knowledge_base/app/api/: main.py
knowledge_base/app/api/add/: dto.py  router.py
knowledge_base/app/api/di/: config.py  container.py
knowledge_base/app/api/experimental/: router.py
knowledge_base/app/api/health/: router.py
knowledge_base/app/api/knowledge/: dto.py  router.py
knowledge_base/app/api/search/: dto.py  router.py
knowledge_base/core/component/: embedder.py  graph.py  llm.py  queue_consumer.py  queue_producer.py
knowledge_base/core/component/add_queue/: kafka.py
knowledge_base/core/component/embedder/: huggingface.py
knowledge_base/core/component/llm/: litellm.py
knowledge_base/core/component/vector_store/: pgvector.py
knowledge_base/core/entity/: graph.py  knowledge.py
knowledge_base/core/port/: embedder.py  graph.py  llm.py  queue_consumer.py  queue_producer.py
knowledge_base/core/prompt/: edge_extraction.txt  new_edge_addtion.txt  old_edge_deletion.txt  vertex_extraction.jinja2  vertex_extraction.txt  vertex_extraction_from_query.jinja2  vertex_extraction_from_query.txt
knowledge_base/core/service/: addition.py  deletion.py  extraction.py  search.py
knowledge_base/core/usecase/: add.py  search.py
knowledge_base/di/: config.py  container.py
knowledge_base/infra/: fastembed.py  kafka.py  litellm.py  logging.py  neo4j.py
knowledge_base/present/api/: main.py
note/: test-neo4j.ipynb
(+8 files in other folders)
