[project]
name = "knowledge-base"
version = "0.1.0"
description = ""
authors = [
    {name = "Wonbin Kim",email = "kwb0711@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm (>=1.68.0,<2.0.0)",
    "kafka-python (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
