[project]
name = "knowledge-base"
version = "0.1.0"
description = ""
authors = [
    {name = "Wonbin Kim",email = "kwb0711@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm (>=1.68.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "mcp (>=1.9.1,<2.0.0)",
    "fastapi-mcp (>=0.3.4,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
